public_html/styles/wallet_section.css
@charset "UTF-8";


main > div.unlocked > div > div > div.sections > div > div.wallet > div > h3.address {
	margin-bottom: 0.2em;
}

@media only screen and (max-width: 400px) {

	main > div.unlocked > div > div > div.sections > div > div.wallet > div > h3.address {
		margin-bottom: 0.3em;
	}
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address {
	display: flex;
	align-items: center;
	flex-direction: column;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > img {
	max-width: 22em;
	flex-grow: 1;
	width: 100%;
	image-rendering: pixelated;
	height: 100%;
	-webkit-user-drag: none;
	-moz-user-drag: none;
	-o-user-drag: none;
	-ms-user-drag: none;
	user-drag: none;
	-moz-user-select: none;
	-webkit-user-select: none;
	-o-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > p > span.contextMenu {
	cursor: text;
	-moz-user-select: text;
	-webkit-user-select: text;
	-o-user-select: text;
	-ms-user-select: text;
	user-select: text;
	word-break: break-all;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > p {
	text-align: center;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address.loading > p > span.contextMenu {
	-moz-user-select: none;
	-webkit-user-select: none;
	-o-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > p > span.copy {
	padding: 0.25em 0.4em;
	display: inline;
	cursor: copy;
	line-height: 1em;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address.loading > p > span.copy {
	pointer-events: none;
	cursor: default;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > p > span.copy::after {
	font-family: "Font Awesome";
	font-weight: bold;
	content: "\F0C5";
	font-size: 15.5pt;
	position: relative;
	top: 1px;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > button {
	margin-top: calc(0.7em * 12 / 15);
}

@media only screen and (max-width: 600px) {

	main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > button {
		margin-top: calc(0.7em * 12 / 15.6);
	}
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > div.loading {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	visibility: hidden;
	opacity: 0;
	transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
	background: white;
	pointer-events: none;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding-bottom: 1px;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address.loading > div.loading {
	visibility: visible;
	opacity: 1;
	pointer-events: auto;
	cursor: wait;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address > div.loading > div {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 0;
	margin: auto;
	border: 0.7em solid #6F00D6;
	border-bottom: 0.7em solid transparent;
	border-right: 0.7em solid transparent;
	border-radius: 50%;
	width: 4em;
	height: 4em;
	animation: spin 1.3s linear infinite;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.address.loading button {
	pointer-events: none;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance {
	flex-direction: column;
	text-align: center;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > p {
	padding-bottom: 0.6em;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > p:last-of-type {
	padding-bottom: 0;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > p + p {
	margin-top: -1px;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > p span.contextMenu {
	line-height: 1.4;
	display: inline;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > button {
	margin-top: calc(0.7em * 12 / 15);
}

@media only screen and (max-width: 600px) {

	main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > button {
		margin-top: calc(0.7em * 12 / 15.6);
	}
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance span.contextMenu {
	cursor: text;
	-moz-user-select: text;
	-webkit-user-select: text;
	-o-user-select: text;
	-ms-user-select: text;
	user-select: text;
	margin-right: auto;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > div.syncStatus {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	visibility: hidden;
	opacity: 0;
	transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
	background: white;
	pointer-events: none;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding-bottom: 1px;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance.syncing > div.syncStatus {
	visibility: visible;
	opacity: 1;
	pointer-events: auto;
	cursor: wait;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance.syncing span.contextMenu {
	-moz-user-select: none;
	-webkit-user-select: none;
	-o-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance.syncing button {
	pointer-events: none;
}

main > div.unlocked > div > div > div.sections > div > div.wallet > div > div.balance > div.syncStatus > svg {
	overflow: visible;
	width: 4.7em;
	height: 4.7em;
	flex-shrink: 0;
	transform: rotate(270deg);
}
/* ... */

